[package]
name = "vscode-tasks"
version = "0.1.0"
authors = ["Philip Walls <pawalls@rabidgeek.com>"]
description = "Command line tool for running vscode tasks."
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
void = "1.0"
clap = "2"

[dev-dependencies]
tempfile = "3"

[lib]
name = "parser"
path = "src/parser.rs"

[[bin]]
name = "vscode-tasks"
path = "src/main.rs"
